--- a/tubeclone.css
+++ b/tubeclone.css
@@ -136,7 +136,7 @@ align-items: center;
     align-items: center;
     justify-content: center;
     z-index: 20;
-    background-color: #313131;
+    background-color: #2c2c2c;
     outline: none;
     border: none;
     border-radius: 0 20px 20px 0;
